--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=quizapplication
 
 spring.data.mongodb.uri=mongodb://localhost:27017/projectdb
 
-
+spring.main.allow-circular-references=true
 
 spring.thymeleaf.check-template-location=false
