--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=quizapplication
 
-spring.data.mongodb.uri=mongodb://localhost:27017/projectdb
+#spring.data.mongodb.uri=mongodb://localhost:27017/projectdb
 
+spring.data.mongodb.uri=mongodb://mongo:dPCMSlUhDmYkmQLrEasFYWJcTXXqaunE@mongodb.railway.internal:27017
 spring.main.allow-circular-references=true
 
 spring.thymeleaf.check-template-location=false
