--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=quizapplication
 
 #spring.data.mongodb.uri=mongodb://localhost:27017/projectdb
 
-spring.data.mongodb.uri=mongodb://mongo:dPCMSlUhDmYkmQLrEasFYWJcTXXqaunE@mongodb.railway.internal:27017
+spring.data.mongodb.uri=mongodb://mongo:dPCMSlUhDmYkmQLrEasFYWJcTXXqaunE@mongodb.railway.internal:27017/projectdb
 spring.main.allow-circular-references=true
 
 spring.thymeleaf.check-template-location=false
