--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,10 @@ spring.application.name=quizapplication
 
 #spring.data.mongodb.uri=mongodb://localhost:27017/projectdb
 
-spring.data.mongodb.uri=mongodb://mongo:dPCMSlUhDmYkmQLrEasFYWJcTXXqaunE@mongodb.railway.internal:27017/projectdb
+#spring.data.mongodb.uri=mongodb+srv://priyankavelagala16:R7TueXSh70pIWq5D@cluster0.tcnpdjp.mongodb.net/
+#spring.data.mongodb.database=projectquizdb
+spring.data.mongodb.uri=mongodb://mongo:BnvOApdiEwWIoHBbvmXANqDWTQsSOILr@yamanote.proxy.rlwy.net:50151/projectdb?authSource=admin
+#spring.data.mongodb.uri=mongodb://mongo:dPCMSlUhDmYkmQLrEasFYWJcTXXqaunE@mongodb.railway.internal:27017/projectdb
 spring.main.allow-circular-references=true
 
 spring.thymeleaf.check-template-location=false
