--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
        <groupId>jakarta.persistence</groupId>
        <artifactId>jakarta.persistence-api</artifactId>
        </dependency>
+       
+       <dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-reload4j</artifactId>
+     </dependency>
 	</dependencies>
 
 	<build>
